--- a/src/app/modules/admin/pages/upload-document/upload-document.component.html
+++ b/src/app/modules/admin/pages/upload-document/upload-document.component.html
@@ -68,7 +68,7 @@
                         <td>
                             <mat-form-field appearance="outline" class="w-full">
                                 <mat-label *transloco="let t" class="font-medium">{{t('state')}}</mat-label>
-                                <mat-select [formControlName]="'stateId'">
+                                <mat-select [formControlName]="'stateId'" (selectionChange)="onStateChange($event.value)">
                                     <mat-option [value]="null">Please Select</mat-option>
                                     <ng-container *ngFor="let stData of stateDropdown; trackBy: trackByFn">
                                         <mat-option [value]="stData.stateId">{{stData.stateName}}</mat-option>
@@ -96,13 +96,13 @@
                         <td>
                             <mat-form-field appearance="outline" class="w-full">
                                 <mat-label *transloco="let t" class="font-medium">{{t('policeStation')}}</mat-label>
-                                <mat-select [formControlName]="'districtId'">
+                                <mat-select [formControlName]="'unitsId'">
                                     <mat-option [value]="null">Please Select</mat-option>
-                                    <ng-container *ngFor="let districtIData of districtDropdown; trackBy: trackByFn">
+                                    <ng-container *ngFor="let districtIData of unitsDropdown; trackBy: trackByFn">
                                         <mat-option [value]="districtIData.districtId">{{districtIData.districtName}}</mat-option>
                                     </ng-container>
                                 </mat-select>
-                                <mat-error *ngIf="uploadDocumentForm.get('districtId').hasError('required')">
+                                <mat-error *ngIf="uploadDocumentForm.get('unitsId').hasError('required')">
                                     Required
                                 </mat-error>
                             </mat-form-field>
