--- a/src/app/layout/common/user/user.component.html
+++ b/src/app/layout/common/user/user.component.html
@@ -23,7 +23,7 @@
     <button mat-menu-item>
         <span class="flex flex-col leading-none">
             <span>Signed in as</span>
-            <span class="mt-1.5 text-md font-medium">Tushar</span>
+            <span class="mt-1.5 text-md font-medium">{{authData.UserName}}</span>
         </span>
     </button>
     <mat-divider class="my-2"></mat-divider>
